--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <h2 id="top" class="text-white">Ubot使用說明</h2>
     <h3 class="text-white">Ubot是一款可以幫使用者找到附近500公尺內的Ubike站點，並查看該站點可借車輛數及可還空位數的查詢機器人</h3>
     <hr>
-    <div class="row">
+    <div class="row mb-5">
       <h2 id="location" class="text-white mt-5 col-12">傳送位置訊息</h2>
       <div class="col-12 col-lg-4">
-        <div class="card w-100" style="width: 18rem;">
+        <div class="card w-100 mt-2" style="width: 18rem;">
           <img src="discription1.jpg" class="card-img-top">
           <div class="card-body">
             <h4 class="card-title">傳送位置訊息-步驟 1</h4>
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="col-12 col-lg-4">
-        <div class="card w-100" style="width: 18rem;">
+        <div class="card w-100 mt-2" style="width: 18rem;">
           <img src="discription-location.jpg" class="card-img-top">
           <div class="card-body">
             <h4 class="card-title">傳送位置訊息-步驟 2</h4>
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div class="col-12 col-lg-4">
-        <div class="card w-100" style="width: 18rem;">
+        <div class="card w-100 mt-2" style="width: 18rem;">
           <img src="discription-location2.jpg" class="card-img-top">
           <div class="card-body">
             <h4 class="card-title">傳送位置訊息-步驟 3</h4>
@@ -78,7 +78,7 @@
       </div>
       <h2 id="signIn" class="text-white mt-5 col-12">註冊</h2>
       <div class="col-12 col-lg-4">
-        <div class="card w-100" style="width: 18rem;">
+        <div class="card w-100 mt-2" style="width: 18rem;">
           <img src="discription-signin.jpg" class="card-img-top">
           <div class="card-body">
             <p class="card-text">如果您未曾註冊過 Ubike 或 T-bike 可以點圖中框起來的兩個按鈕(請依照您要借用的車輛種類)進行註冊</p>
@@ -87,7 +87,7 @@
         </div>
       </div>
       <div class="col-12 col-lg-4">
-        <div class="card w-100" style="width: 18rem;">
+        <div class="card w-100 mt-2" style="width: 18rem;">
           <img src="card_img.jpg" class="card-img-top">
           <div class="card-body">
             <p class="card-text">悠遊卡的卡號位於卡片背面右下，如上圖左邊框起來的地方，共 10 碼</p>
@@ -96,7 +96,7 @@
         </div>
       </div>
       <div class="col-12 col-lg-4">
-        <div class="card w-100" style="width: 18rem;">
+        <div class="card w-100 mt-2" style="width: 18rem;">
           <img src="card.png" class="card-img-top">
           <div class="card-body">
             <p class="card-text">一卡通的卡號位於卡片背面右下，如上圖框起來的地方，共 11 碼</p>
@@ -105,31 +105,18 @@
       </div>
       <h2 id="others" class="text-white mt-5 col-12">其他</h2>
       <div class="col-12 col-lg-4">
-        <div class="card w-100" style="width: 18rem;">
-          <img src="discription1.jpg" class="card-img-top">
+        <div class="card w-100 mt-2" style="width: 18rem;">
           <div class="card-body">
-            <h4 class="card-title">傳送位置訊息-步驟 1</h4>
-            <p class="card-text">點選圖片中框起來的傳送位置訊息選項送出傳送位置訊息的指令</p>
+            <h4 class="card-title">Ubot 可使用縣市</h4>
+            <p class="card-text">因部分縣市未提供相關資料(或提供的資料格式複雜，難以使用)，所以只有台北、新北、桃園、台中、台南等縣市可以用用 Ubot 機器人查詢 Ubike 站點(台南為 T-bike)</p>
           </div>
         </div>
       </div>
       <div class="col-12 col-lg-4">
-        <div class="card w-100" style="width: 18rem;">
-          <img src="discription-location.jpg" class="card-img-top">
+        <div class="card w-100 mt-2" style="width: 18rem;">
           <div class="card-body">
-            <h4 class="card-title">傳送位置訊息-步驟 2</h4>
-            <p class="card-text">機器人收到指令後會回傳一段訊息，於聊天室底部會出現圖中框起來的傳送位置訊息小按鈕</p>
-            <p class="card-text">按下按鈕就可以開啟傳送位置訊息的地圖視窗</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-4">
-        <div class="card w-100" style="width: 18rem;">
-          <img src="discription-location2.jpg" class="card-img-top">
-          <div class="card-body">
-            <h4 class="card-title">傳送位置訊息-步驟 3</h4>
-            <p class="card-text">地圖視窗開啟後，會自動標示目前所在位置，可以拖曳畫面選擇預借(還)車地區</p>
-            <p class="card-text">按下框起來的對話框後即可送出位置訊息，機器人收到後會搜尋傳送的位置附近500公尺內的站點並回傳相關訊息</p>
+            <h4 class="card-title">機器人回應</h4>
+            <p class="card-text">如果超過30分鐘以上沒有人使用，機器人會自動休眠，若回應較遲請耐心等候，如果3分鐘內未收到機器人回復，請再試一次，若還是不行，可能是政府資料出錯</p>
           </div>
         </div>
       </div>
